[gd_scene load_steps=83 format=2]

[ext_resource path="res://sprites/sonic/sonic_run4_7.png" type="Texture" id=1]
[ext_resource path="res://sprites/effects/sonic_boost_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/sonic/sonic_run4_3.png" type="Texture" id=3]
[ext_resource path="res://sprites/sonic/spindash.png" type="Texture" id=4]
[ext_resource path="res://sprites/sonic/sonic_run4_6.png" type="Texture" id=5]
[ext_resource path="res://sprites/sonic/roll.png" type="Texture" id=6]
[ext_resource path="res://sprites/sonic/sonic_run4_2.png" type="Texture" id=7]
[ext_resource path="res://sprites/effects/sonic_boost_1.png" type="Texture" id=8]
[ext_resource path="res://sprites/sonic/sonic_run4_4.png" type="Texture" id=9]
[ext_resource path="res://sprites/sonic/sonic_run4_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/sonic/Crouch.png" type="Texture" id=11]
[ext_resource path="res://sprites/sonic/grind.png" type="Texture" id=12]
[ext_resource path="res://sprites/effects/sonic_boost_0.png" type="Texture" id=13]
[ext_resource path="res://sprites/sonic/sonic_run4_5.png" type="Texture" id=14]
[ext_resource path="res://sprites/effects/sonic_boost_3.png" type="Texture" id=15]
[ext_resource path="res://audio/SFX/stomping.wav" type="AudioStream" id=16]
[ext_resource path="res://audio/SFX/Boost.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/SFX/stomping_land.wav" type="AudioStream" id=18]
[ext_resource path="res://scripts/Player_v2.gd" type="Script" id=19]
[ext_resource path="res://sprites/sonic/sonic_run2_6.png" type="Texture" id=20]
[ext_resource path="res://sprites/sonic/Sonic_run31.png" type="Texture" id=21]
[ext_resource path="res://sprites/sonic/sonic_walk_3.png" type="Texture" id=22]
[ext_resource path="res://sprites/sonic/sonic_run2_1.png" type="Texture" id=23]
[ext_resource path="res://sprites/sonic/Sonic_run32.png" type="Texture" id=24]
[ext_resource path="res://sprites/sonic/sonic_idle6.png" type="Texture" id=25]
[ext_resource path="res://sprites/sonic/sonic_walk_0.png" type="Texture" id=26]
[ext_resource path="res://sprites/sonic/sonic_walk_2.png" type="Texture" id=27]
[ext_resource path="res://sprites/sonic/sonic_walk_4.png" type="Texture" id=28]
[ext_resource path="res://sprites/sonic/sonic_walk_5.png" type="Texture" id=29]
[ext_resource path="res://sprites/sonic/sonic_walk_6.png" type="Texture" id=30]
[ext_resource path="res://sprites/sonic/sonic_walk_7.png" type="Texture" id=31]
[ext_resource path="res://sprites/sonic/sonic_idle5.png" type="Texture" id=32]
[ext_resource path="res://sprites/sonic/sonic_idle7.png" type="Texture" id=33]
[ext_resource path="res://sprites/sonic/sonic_run2_0.png" type="Texture" id=34]
[ext_resource path="res://sprites/sonic/sonic_run2_2.png" type="Texture" id=35]
[ext_resource path="res://sprites/sonic/sonic_run2_4.png" type="Texture" id=36]
[ext_resource path="res://sprites/sonic/sonic_run2_5.png" type="Texture" id=37]
[ext_resource path="res://sprites/sonic/sonic_idle2.png" type="Texture" id=38]
[ext_resource path="res://sprites/sonic/sonic_idle4.png" type="Texture" id=39]
[ext_resource path="res://sprites/sonic/sonic_idle0.png" type="Texture" id=40]
[ext_resource path="res://sprites/sonic/sonic_run2_7.png" type="Texture" id=41]
[ext_resource path="res://sprites/sonic/sonic_idle3.png" type="Texture" id=42]
[ext_resource path="res://sprites/sonic/Sonic_run30.png" type="Texture" id=43]
[ext_resource path="res://sprites/sonic/sonic_walk_1.png" type="Texture" id=44]
[ext_resource path="res://sprites/sonic/sonic_run2_3.png" type="Texture" id=45]
[ext_resource path="res://sprites/sonic/sonic_idle1.png" type="Texture" id=46]
[ext_resource path="res://sprites/sonic/Sonic_run33.png" type="Texture" id=47]
[ext_resource path="res://sprites/sonic/Sonic_run34.png" type="Texture" id=48]
[ext_resource path="res://sprites/sonic/sonic_run4_0.png" type="Texture" id=49]
[ext_resource path="res://sprites/sonic/Sonic_run35.png" type="Texture" id=50]
[ext_resource path="res://sprites/sonic/Sonic_run36.png" type="Texture" id=51]
[ext_resource path="res://sprites/sonic/Sonic_run37.png" type="Texture" id=52]
[ext_resource path="res://audio/SFX/rail.wav" type="AudioStream" id=53]
[ext_resource path="res://sprites/sonic/hurt.png" type="Texture" id=54]
[ext_resource path="res://LevelItems/BounceRing.tscn" type="PackedScene" id=55]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 54 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 54 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 54 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 54 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 54 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 33, 0, 33, 35 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Grind",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "Run4",
"speed": 26.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 23 ), ExtResource( 35 ), ExtResource( 45 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 20 ), ExtResource( 41 ) ],
"loop": true,
"name": "Run2",
"speed": 15.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 9 ), SubResource( 8 ) ],
"loop": true,
"name": "Crouch",
"speed": 10.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": true,
"name": "Run3",
"speed": 18.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 44 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Spindash",
"speed": 15.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Roll",
"speed": 16.0
} ]

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0.0927152, 0.390728 )
colors = PoolColorArray( 0.00990295, 0.0960615, 0.230469, 0, 0, 0.320313, 1, 1 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.0180723, 0.46988 )
colors = PoolColorArray( 0.99295, 1, 0.871094, 1, 0.945313, 1, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0899471, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.374359, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
lifetime_randomness = 1.0
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, -20, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 4.0
scale_random = 1.0
scale_curve = SubResource( 26 )
color_ramp = SubResource( 24 )

[node name="Player" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 19 )
boost_sfx = ExtResource( 17 )
stomp_sfx = ExtResource( 16 )
stomp_land_sfx = ExtResource( 18 )
bounceRing = ExtResource( 55 )
SKID_ACCEL = 0.1
JUMP_VELOCITY = 4.0

[node name="playerCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -1.05945 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 20.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D"]
visible = false
margin_left = -50.1209
margin_top = -48.7575
margin_right = -10.1209
margin_bottom = -8.75748
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprites" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
animation = "Run2"
frame = 4
playing = true
flip_h = true

[node name="LeftCast" type="RayCast2D" parent="."]
position = Vector2( -6, -10 )
enabled = true

[node name="LeftCastTop" type="RayCast2D" parent="."]
position = Vector2( -8, 10 )
enabled = true
cast_to = Vector2( 0, -70 )

[node name="RightCast" type="RayCast2D" parent="."]
position = Vector2( 6, -10 )
enabled = true

[node name="RightCastTop" type="RayCast2D" parent="."]
position = Vector2( 8, 10 )
enabled = true
cast_to = Vector2( 0, -70 )

[node name="LSideCast" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="RSideCast" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="BoostLine" type="Line2D" parent="."]
visible = false
z_index = -2
points = PoolVector2Array( 0, 0, -200, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
width = 20.0
default_color = Color( 0.4, 0.501961, 1, 0 )
gradient = SubResource( 21 )
texture_mode = 4124
joint_mode = 2

[node name="BoostSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.78451 )
frames = SubResource( 22 )
frame = 1
playing = true

[node name="BoostSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -3.0

[node name="RailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 53 )
volume_db = 3.438

[node name="GrindParticles" type="Particles2D" parent="."]
position = Vector2( 0.382431, 13.8875 )
amount = 500
randomness = 1.0
local_coords = false
process_material = SubResource( 27 )
